--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,12 @@ body .header .location span {
 body .header .header__image {
   height: 275px;
 }
+@media screen and (min-width: 1024px) {
+  body .header .header__image {
+    min-width: 1440px;
+    height: 383px;
+  }
+}
 body main {
   background-color: #F6F6F6;
 }
@@ -82,28 +88,6 @@ body main .presentation h1 {
 body main .presentation p {
   font-weight: 300;
   font-size: 18px;
-}
-body main .action_button {
-  height: 50px;
-  margin: 20px;
-  border: 2px solid;
-  border-radius: 25px;
-  font-weight: 500;
-  font-size: 16px;
-  font-family: "Roboto", sans-serif;
-  background-color: #9356DC;
-  color: white;
-  width: 61%;
-  height: 50px;
-  cursor: pointer;
-}
-body main .action_button:hover {
-  background-color: #FF79DA;
-  transition: 1s;
-}
-body main .menu__title {
-  display: flex;
-  justify-content: space-around;
 }
 body main .fonctionnement {
   padding: 20px;
@@ -142,8 +126,58 @@ body main .fonctionnement ul li .number {
   margin-right: 10px;
   left: -10px;
 }
+@media screen and (min-width: 1024px) {
+  body main .fonctionnement {
+    display: flex;
+    justify-content: center;
+  }
+  body main .fonctionnement div {
+    max-width: 1053px;
+  }
+  body main .fonctionnement div ul {
+    display: flex;
+  }
+  body main .fonctionnement div ul li {
+    min-width: 335px;
+    margin-right: 30px;
+  }
+}
 body main .restaurants {
   padding: 20px;
+}
+@media screen and (min-width: 1024px) {
+  body main .restaurants {
+    display: flex;
+    justify-content: center;
+  }
+  body main .restaurants div {
+    max-width: 1080px;
+  }
+  body main .restaurants div .restaurants__cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 50px;
+  }
+  body main .restaurants div .restaurants__cards .card {
+    min-width: 490px;
+    height: 251px;
+    margin-bottom: 0;
+  }
+  body main .restaurants div .restaurants__cards .card img {
+    height: 181px;
+  }
+}
+body main .menu .menu__title {
+  display: flex;
+  justify-content: space-around;
+}
+@media screen and (min-width: 1024px) {
+  body main .menu {
+    display: flex;
+    justify-content: center;
+    min-width: 1055px;
+  }
 }
 body main .card {
   position: relative;
@@ -247,6 +281,29 @@ body main .command_action {
   display: flex;
   justify-content: center;
 }
+body main .action_button {
+  height: 50px;
+  margin: 20px;
+  border: 2px solid;
+  border-radius: 25px;
+  font-weight: 500;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  background-color: #9356DC;
+  color: white;
+  width: 61%;
+  height: 50px;
+  cursor: pointer;
+}
+body main .action_button:hover {
+  background-color: #FF79DA;
+  transition: 1s;
+}
+@media screen and (min-width: 1024px) {
+  body main .action_button {
+    max-width: 218px;
+  }
+}
 body .footer {
   background-color: #353535;
   color: white;
@@ -260,6 +317,24 @@ body .footer ul li {
 body .footer ul li i {
   padding-right: 10px;
   width: 5%;
+}
+@media screen and (min-width: 1024px) {
+  body .footer {
+    display: flex;
+    justify-content: right;
+    flex-direction: row-reverse;
+    gap: 16px;
+    height: 114px;
+    align-items: end;
+  }
+  body .footer ul {
+    display: flex;
+    min-width: 661px;
+    justify-content: left;
+  }
+  body .footer ul li {
+    padding: 0 5px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
