--- a/css/style.scss
+++ b/css/style.scss
@@ -72,11 +72,18 @@ body {
 
         .header__image {
             height: 275px;
+
+            @media screen and (min-width: 1024px) {
+                min-width: 1440px;
+                height: 383px;
+            }
         }
     }
 
     main {
         background-color: #F6F6F6;
+
+
 
         .presentation {
             display: flex;
@@ -95,31 +102,7 @@ body {
                 font-weight: 300;
                 font-size: 18px;
             }
-        }
 
-        .action_button {
-            height: 50px;
-            margin: 20px;
-            border: 2px solid ;
-            border-radius: 25px;
-            font-weight: 500;
-            font-size: 16px;
-            font-family: 'Roboto', sans-serif;
-            background-color: #9356DC ;
-            color: white;
-            width: 61%;
-            height: 50px;
-            cursor: pointer;
-
-            &:hover{
-                background-color: #FF79DA;
-                transition: 1s;
-            }
-        }
-
-        .menu__title {
-            display: flex;
-            justify-content: space-around;
         }
 
         .fonctionnement{
@@ -162,12 +145,64 @@ body {
                         left: -10px;
                     }
                 }
+
+                
             
+            }
+
+            @media screen and (min-width: 1024px) {
+                display: flex;
+                justify-content: center;
+                div {
+                    max-width: 1053px;
+                    ul {
+                        display: flex;
+                        li {
+                            min-width: 335px;
+                            margin-right: 30px;
+                        }
+                    }
+                }
             }
         }
 
         .restaurants {
             padding: 20px;
+
+            @media screen and (min-width: 1024px) {
+                display: flex;
+                justify-content: center;
+                div {
+                    max-width: 1080px;
+                    .restaurants__cards {
+                        display: flex;
+                        flex-wrap: wrap;
+                        justify-content: space-between;
+                        gap : 50px;
+                        .card {
+                            min-width: 490px;
+                            height: 251px;
+                            margin-bottom: 0;
+                            img {
+                                height: 181px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        .menu {
+            .menu__title {
+                display: flex;
+                justify-content: space-around;
+            }
+
+            @media screen and (min-width: 1024px) {
+                display: flex;
+                justify-content: center;
+                min-width: 1055px;
+            }
         }
 
 
@@ -292,6 +327,30 @@ body {
             display: flex;
             justify-content: center;
         }
+
+        .action_button {
+            height: 50px;
+            margin: 20px;
+            border: 2px solid ;
+            border-radius: 25px;
+            font-weight: 500;
+            font-size: 16px;
+            font-family: 'Roboto', sans-serif;
+            background-color: #9356DC ;
+            color: white;
+            width: 61%;
+            height: 50px;
+            cursor: pointer;
+
+            &:hover{
+                background-color: #FF79DA;
+                transition: 1s;
+            }
+
+            @media screen and (min-width: 1024px) {
+                max-width: 218px;
+            }
+        }
         
     }
 
@@ -309,6 +368,24 @@ body {
                 i {
                     padding-right: 10px;
                     width: 5%;
+                }
+            }
+        }
+
+        @media screen and (min-width: 1024px) {
+            display: flex;
+            justify-content: right;
+            flex-direction: row-reverse;
+            gap: 16px;
+            height: 114px;
+            align-items: end;
+            ul {
+                display: flex;
+                min-width: 661px;
+                justify-content: left;
+
+                li {
+                    padding: 0 5px;
                 }
             }
         }
