--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,12 @@ body .header .header__logo {
   justify-content: center;
   align-items: center;
 }
+body .header .header__logo .header__back-button {
+  position: absolute;
+  left: 20px;
+  color: #353535;
+  font-size: 20px;
+}
 body .header .header__logo img {
   height: 44px;
   width: 65%;
@@ -60,17 +66,18 @@ body .header .location span {
   padding-left: 15px;
   font-family: "Roboto", sans-serif;
 }
-body .header .header__image {
+body main {
+  background-color: #F6F6F6;
+  padding-bottom: 50px;
+}
+body main .menu__page__image {
   height: 275px;
 }
 @media screen and (min-width: 1024px) {
-  body .header .header__image {
+  body main .menu__page__image {
     min-width: 1440px;
     height: 383px;
   }
-}
-body main {
-  background-color: #F6F6F6;
 }
 body main .presentation {
   display: flex;
@@ -93,6 +100,9 @@ body main .fonctionnement {
   padding: 20px;
   background-color: white;
 }
+body main .fonctionnement ul {
+  margin-left: 10px;
+}
 body main .fonctionnement ul li {
   position: relative;
   display: flex;
@@ -105,14 +115,9 @@ body main .fonctionnement ul li {
   font-size: 16px;
   font-family: "Roboto", sans-serif;
   margin-bottom: 20px;
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.1490196078);
 }
-body main .fonctionnement ul li i {
-  padding: 0 30px;
-}
-body main .fonctionnement ul li .fa-store {
-  color: #9356DC;
-}
-body main .fonctionnement ul li .number {
+body main .fonctionnement ul li span {
   position: absolute;
   display: flex;
   justify-content: center;
@@ -125,6 +130,17 @@ body main .fonctionnement ul li .number {
   text-align: center;
   margin-right: 10px;
   left: -10px;
+  font-size: 14.18px;
+}
+body main .fonctionnement ul li i {
+  position: relative;
+  padding: 0 30px;
+  color: #7E7E7E;
+  font-size: 19px;
+  top: -3px;
+}
+body main .fonctionnement ul li .fa-store {
+  color: #9356DC;
 }
 @media screen and (min-width: 1024px) {
   body main .fonctionnement {
@@ -168,29 +184,17 @@ body main .restaurants {
     height: 181px;
   }
 }
-body main .menu .menu__title {
-  display: flex;
-  justify-content: space-around;
-}
-@media screen and (min-width: 1024px) {
-  body main .menu {
-    display: flex;
-    justify-content: center;
-    min-width: 1055px;
-  }
-}
 body main .card {
   position: relative;
   display: flex;
   flex-direction: column;
   border-radius: 20px;
-  padding-right: 5px;
   filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
   background-color: white;
-  transition: padding-right 1s ease-in-out;
   margin-bottom: 20px;
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.1019607843);
 }
-body main .card .new_restaurant {
+body main .card .card_tag {
   position: absolute;
   background-color: #99E2D0;
   height: 29px;
@@ -205,7 +209,7 @@ body main .card .new_restaurant {
   align-items: center;
   color: green;
 }
-body main .card img {
+body main .card .card_image {
   object-fit: cover;
   height: 124px;
   border-radius: 20px 20px 0px 0px;
@@ -218,12 +222,16 @@ body main .card .card-content {
   justify-content: space-between;
 }
 body main .card .card-content .card-title {
-  font-size: 16px;
+  font-size: 18px;
   margin-top: 10px;
   margin-bottom: 4px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
 }
 body main .card .card-content .card-subtitle {
-  font-size: 14px;
+  font-size: 17px;
+  font-weight: 300;
+  font-family: "Roboto", sans-serif;
   margin: 5px 0;
 }
 body main .card .card-content .card__price {
@@ -246,17 +254,92 @@ body main .card .checkmark {
   line-height: 200px;
   transition: width 1s ease-in-out, opacity 1s ease-in-out;
 }
-body main .card:hover {
+body main .menu {
+  display: flex;
+  flex-direction: column;
+  z-index: 1000;
+  padding: 20px;
+  border-top: 1px solid white;
+  border-radius: 20px;
+  background-color: #F6F6F6;
+  gap: 40px;
+}
+body main .menu .menu__header {
+  display: flex;
+  justify-content: space-around;
+}
+body main .menu .menu__header .menu__title {
+  font-family: "Shrikhand";
+  font-style: italic;
+  font-weight: 400;
+  font-size: 28px;
+}
+body main .menu .menu__header button {
+  display: flex;
+  align-items: center;
+}
+body main .menu .section_title {
+  position: relative;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  padding-bottom: 10px;
+}
+body main .menu .section_title::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 40px;
+  height: 3px;
+  background-color: #99E2D0;
+}
+body main .menu .card {
+  padding-right: 5px;
+  transition: padding-right 1s ease-in-out;
+  height: 69px;
+  justify-content: center;
+  padding: 15px;
+}
+body main .menu .card .card-content {
+  padding: 0;
+}
+body main .menu .card .card-content .card-txt {
+  transition: width 1s ease-in-out;
+}
+body main .menu .card .card-content .card-txt .card-title {
+  font-weight: 500;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+body main .menu .card .card-content .card-txt .card-subtitle {
+  font-weight: 300;
+  font-size: 15.04px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+body main .menu .card:hover {
   padding-right: 25%;
 }
-body main .card:hover .checkmark {
+body main .menu .card:hover .card-txt {
+  width: 80%;
+}
+body main .menu .card:hover .checkmark {
   opacity: 1;
   width: 20%;
+}
+@media screen and (min-width: 1024px) {
+  body main .menu {
+    display: flex;
+    justify-content: center;
+    min-width: 1055px;
+  }
 }
 body main .icon-button {
   position: relative;
   background: none;
-  color: #9356DC;
   border: none;
   padding: 0;
   font: inherit;
@@ -267,9 +350,14 @@ body main .icon-button .icon-default, body main .icon-button .icon-hover {
   position: absolute;
   right: 0;
   transition: opacity 2s;
+  font-size: 22px;
+  -webkit-text-stroke: 1px white;
 }
 body main .icon-button .icon-hover {
   opacity: 0;
+  background: linear-gradient(#9356DC, #FF79DA);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 body main .icon-button:hover .icon-default {
   opacity: 0;
@@ -289,7 +377,7 @@ body main .action_button {
   font-weight: 500;
   font-size: 16px;
   font-family: "Roboto", sans-serif;
-  background-color: #9356DC;
+  background: linear-gradient(#FF79DA, #9356DC);
   color: white;
   width: 61%;
   height: 50px;
@@ -307,14 +395,27 @@ body main .action_button:hover {
 body .footer {
   background-color: #353535;
   color: white;
+  padding: 22px 25px;
 }
-body .footer ul li {
-  padding: 0 15px 15px 15px;
+body .footer .footer_title {
+  font-family: "Shrikhand";
+  font-style: italic;
+  font-size: 40px;
+  font-weight: 800;
+  padding: 20px 0;
+  margin: 0;
+}
+body .footer .footer_list {
+  margin: 0;
+  gap: 7px;
+}
+body .footer .footer_list li {
+  padding-bottom: 15px;
   font-weight: 500;
   font-size: 16px;
   font-family: "Roboto", sans-serif;
 }
-body .footer ul li i {
+body .footer .footer_list li i {
   padding-right: 10px;
   width: 5%;
 }
