--- a/css/style.scss
+++ b/css/style.scss
@@ -49,6 +49,13 @@ body {
             display: flex;
             justify-content: center;
             align-items: center;
+            
+            .header__back-button {
+                position: absolute;
+                left: 20px;
+                color : #353535;
+                font-size: 20px;
+            }
 
             img {
                 height: 44px;
@@ -70,20 +77,21 @@ body {
             }
         }
 
-        .header__image {
+    }
+    
+    main {
+        // position: relative;
+        background-color: #F6F6F6;
+        padding-bottom: 50px;
+        
+        .menu__page__image {
             height: 275px;
-
+    
             @media screen and (min-width: 1024px) {
                 min-width: 1440px;
                 height: 383px;
             }
         }
-    }
-
-    main {
-        background-color: #F6F6F6;
-
-
 
         .presentation {
             display: flex;
@@ -109,6 +117,7 @@ body {
             padding: 20px;
             background-color: white;
             ul {
+                margin-left: 10px;
                 li {
                     position: relative;
                     display: flex;
@@ -121,16 +130,9 @@ body {
                     font-size: 16px;
                     font-family: 'Roboto', sans-serif;
                     margin-bottom: 20px;
+                    box-shadow: 10px 10px 15px #00000026;
 
-                    i {
-                        padding: 0 30px;
-                    }
-                    
-                    .fa-store {
-                        color: #9356DC;
-
-                    }
-                    .number {
+                    span {
                         position: absolute;
                         display: flex;
                         justify-content: center;
@@ -143,7 +145,23 @@ body {
                         text-align: center;
                         margin-right: 10px;
                         left: -10px;
+                        font-size: 14.18px;
                     }
+
+                    i {
+                        position: relative;
+                        padding: 0 30px;
+                        color: #7E7E7E;
+                        font-size: 19px;
+                        top : -3px;
+                    }
+                    
+                    .fa-store {
+                        color: #9356DC;
+
+                    }
+                    
+
                 }
 
                 
@@ -192,33 +210,17 @@ body {
             }
         }
 
-        .menu {
-            .menu__title {
-                display: flex;
-                justify-content: space-around;
-            }
-
-            @media screen and (min-width: 1024px) {
-                display: flex;
-                justify-content: center;
-                min-width: 1055px;
-            }
-        }
-
-
         .card {
             position: relative;
             display: flex;
             flex-direction: column;
             border-radius: 20px;
-            // padding: 5px;
-            padding-right: 5px;
             filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
             background-color: white;
-            transition: padding-right 1s ease-in-out;
             margin-bottom: 20px;
+            box-shadow: 10px 10px 15px #0000001A;
 
-            .new_restaurant {
+            .card_tag {
                 position: absolute;
                 background-color: #99E2D0;
                 height: 29px;
@@ -234,7 +236,7 @@ body {
                 color: green;
             }
        
-            img {
+            .card_image {
                 object-fit: cover;
                 height: 124px;
                 border-radius: 20px 20px 0px 0px;
@@ -248,13 +250,17 @@ body {
                 justify-content: space-between;
     
                 .card-title {
-                    font-size: 16px;
+                    font-size: 18px;
                     margin-top: 10px;
                     margin-bottom: 4px;
+                    font-family: 'Roboto', sans-serif;
+                    font-weight: 700;
                 }
     
                 .card-subtitle {
-                    font-size: 14px;
+                    font-size: 17px;
+                    font-weight: 300;
+                    font-family: 'Roboto', sans-serif;
                     margin: 5px 0;
                 }
 
@@ -281,21 +287,114 @@ body {
                 transition: width 1s ease-in-out, opacity 1s ease-in-out;
 
             }
+        }
 
-            &:hover {
-                padding-right: 25%;
-                .checkmark {
-                    opacity: 1;
-                    width: 20%;
+        .menu {
+            // position: absolute;
+            // top : 200px;
+            display: flex;
+            flex-direction: column;
+            z-index: 1000;
+            padding: 20px;
+            border-top: 1px solid white;
+            border-radius: 20px;
+            background-color: #F6F6F6;
+            gap: 40px;
+            
+            .menu__header {
+                display: flex;
+                justify-content: space-around;
+
+                .menu__title {
+                    font-family: 'Shrikhand';
+                    font-style: italic;
+                    font-weight: 400;
+                    font-size: 28px;
+                }
+
+                button {
+                    display: flex;
+                    align-items: center;
                 }
             }
 
+
+            .section_title{
+                position: relative;
+                font-family: 'Roboto', sans-serif;
+                font-weight: 300;
+                font-size: 16px;
+                padding-bottom: 10px;
+
+                &::after {
+                    content: '';
+                    position: absolute;
+                    left: 0;
+                    bottom: 0;
+                    width: 40px; 
+                    height: 3px; 
+                    background-color: #99E2D0;
+                  }
+            }
+
+            .card {
+                padding-right: 5px;
+                transition: padding-right 1s ease-in-out;
+                height: 69px;
+                justify-content: center;
+                padding: 15px;
+
+                .card-content {
+                    padding: 0;
+
+                    .card-txt {
+                        transition: width 1s ease-in-out;
+
+                        .card-title {
+                            font-weight: 500;
+                            white-space: nowrap;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                        }
+        
+                        .card-subtitle {
+                            font-weight: 300;
+                            font-size: 15.04px;
+                            white-space: nowrap;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                        }
+                    }
+                }
+
+
+                &:hover {
+                    padding-right: 25%;
+
+                    .card-txt {
+                        width: 80%;
+                    }
+                    
+                    .checkmark {
+                        opacity: 1;
+                        width: 20%;
+                    }
+                }
+            }
+
+            @media screen and (min-width: 1024px) {
+                display: flex;
+                justify-content: center;
+                min-width: 1055px;
+            }
         }
+
+
+
 
         .icon-button {
             position: relative;
             background: none;
-            color: #9356DC;
             border: none;
             padding: 0;
             font: inherit;
@@ -306,10 +405,15 @@ body {
                 position: absolute;
                 right: 0;
                 transition: opacity 2s;
+                font-size: 22px;
+                -webkit-text-stroke: 1px white;
             }
 
             .icon-hover {
                 opacity: 0;
+                background: linear-gradient(#9356DC, #FF79DA);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
             }
 
             &:hover {
@@ -319,6 +423,7 @@ body {
 
                 .icon-hover {
                     opacity: 1;
+
                 }
             }
         }
@@ -336,7 +441,7 @@ body {
             font-weight: 500;
             font-size: 16px;
             font-family: 'Roboto', sans-serif;
-            background-color: #9356DC ;
+            background: linear-gradient(#FF79DA,#9356DC);
             color: white;
             width: 61%;
             height: 50px;
@@ -357,11 +462,22 @@ body {
     .footer{
         background-color: #353535;
         color: white;
+        padding: 22px 25px;
+
+        .footer_title {
+            font-family: 'Shrikhand';
+            font-style: italic;
+            font-size: 40px;
+            font-weight: 800;
+            padding: 20px 0;
+            margin: 0;
+        }
         
-        ul {
+        .footer_list {
+            margin: 0;
+            gap: 7px;
             li {
-                
-                padding: 0 15px 15px 15px;
+                padding-bottom: 15px;
                 font-weight: 500;
                 font-size: 16px;
                 font-family: 'Roboto', sans-serif;
