--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ body main .presentation {
   text-align: center;
   padding: 20px 0;
 }
-body main .presentation h1 {
+body main .presentation .presentation__title {
   height: 68px;
   width: 73%;
   margin-bottom: 0;
@@ -95,6 +95,16 @@ body main .presentation h1 {
 body main .presentation p {
   font-weight: 300;
   font-size: 18px;
+}
+@media screen and (min-width: 1024px) {
+  body main .presentation br {
+    display: none;
+  }
+  body main .presentation .presentation__title {
+    font-weight: 400;
+    font-size: 40px;
+    height: 47px;
+  }
 }
 body main .fonctionnement {
   padding: 20px;
@@ -451,12 +461,19 @@ body .footer .footer_list li i {
     height: 114px;
     align-items: end;
   }
-  body .footer ul {
+  body .footer .footer_title {
+    font-size: 18px;
+    font-weight: bold;
+    padding-bottom: 0;
+    width: 10%;
+    height: 27px;
+  }
+  body .footer .footer_list {
     display: flex;
     min-width: 661px;
     justify-content: left;
   }
-  body .footer ul li {
+  body .footer .footer_list li {
     padding: 0 5px;
   }
 }
