--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ body .header .header__logo .header__back-button {
 body .header .header__logo img {
   height: 44px;
   width: 65%;
+  padding-top: 10px;
 }
 body .header .location {
   width: 100%;
@@ -91,6 +92,8 @@ body main .presentation .presentation__title {
   height: 68px;
   width: 73%;
   margin-bottom: 0;
+  font-weight: 700;
+  font-size: 24px;
 }
 body main .presentation p {
   font-weight: 300;
@@ -101,7 +104,7 @@ body main .presentation p {
     display: none;
   }
   body main .presentation .presentation__title {
-    font-weight: 400;
+    font-weight: 700;
     font-size: 40px;
     height: 47px;
   }
@@ -109,11 +112,15 @@ body main .presentation p {
 body main .fonctionnement {
   padding: 20px;
   background-color: white;
+  font-family: "Roboto", sans-serif;
 }
-body main .fonctionnement ul {
+body main .fonctionnement .fonctionnement_list {
   margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-body main .fonctionnement ul li {
+body main .fonctionnement .fonctionnement_list li {
   position: relative;
   display: flex;
   width: 96%;
@@ -123,11 +130,10 @@ body main .fonctionnement ul li {
   background-color: #F6F6F6;
   font-weight: 500;
   font-size: 16px;
-  font-family: "Roboto", sans-serif;
   margin-bottom: 20px;
-  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.1490196078);
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1490196078);
 }
-body main .fonctionnement ul li span {
+body main .fonctionnement .fonctionnement_list li span {
   position: absolute;
   display: flex;
   justify-content: center;
@@ -142,14 +148,14 @@ body main .fonctionnement ul li span {
   left: -10px;
   font-size: 14.18px;
 }
-body main .fonctionnement ul li i {
+body main .fonctionnement .fonctionnement_list li i {
   position: relative;
   padding: 0 30px;
   color: #7E7E7E;
   font-size: 19px;
   top: -3px;
 }
-body main .fonctionnement ul li .fa-store {
+body main .fonctionnement .fonctionnement_list li .fa-store {
   color: #9356DC;
 }
 @media screen and (min-width: 1024px) {
@@ -160,16 +166,17 @@ body main .fonctionnement ul li .fa-store {
   body main .fonctionnement div {
     max-width: 1053px;
   }
-  body main .fonctionnement div ul {
-    display: flex;
+  body main .fonctionnement div .fonctionnement_list {
+    flex-direction: row;
+    gap: 30px;
   }
-  body main .fonctionnement div ul li {
+  body main .fonctionnement div .fonctionnement_list li {
     min-width: 335px;
-    margin-right: 30px;
   }
 }
 body main .restaurants {
   padding: 20px;
+  font-family: "Roboto", sans-serif;
 }
 @media screen and (min-width: 1024px) {
   body main .restaurants {
@@ -199,10 +206,10 @@ body main .card {
   display: flex;
   flex-direction: column;
   border-radius: 20px;
-  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
   background-color: white;
   margin-bottom: 20px;
-  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.1019607843);
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1019607843);
+  font-family: "Roboto", sans-serif;
 }
 body main .card .card_tag {
   position: absolute;
@@ -213,7 +220,6 @@ body main .card .card_tag {
   left: 238px;
   font-weight: 500;
   font-size: 14px;
-  font-family: "Roboto", sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -235,18 +241,15 @@ body main .card .card-content .card-title {
   font-size: 18px;
   margin-top: 10px;
   margin-bottom: 4px;
-  font-family: "Roboto", sans-serif;
   font-weight: 700;
 }
 body main .card .card-content .card-subtitle {
   font-size: 17px;
   font-weight: 300;
-  font-family: "Roboto", sans-serif;
   margin: 5px 0;
 }
 body main .card .card-content .card-price {
   padding-top: 20px;
-  font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 15.04px;
 }
@@ -255,43 +258,44 @@ body main .card .checkmark {
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 0 20px 20px 0;
+  border-radius: 0 15px 15px 0;
   opacity: 0;
   right: 0;
   top: 0;
   width: 0;
   height: 100%;
-  background-color: green;
-  color: white;
+  background-color: #99E2D0;
   text-align: center;
-  line-height: 200px;
   transition: width 1s ease-in-out, opacity 1s ease-in-out;
+}
+body main .card .checkmark i {
+  color: white;
+  font-size: 20px;
 }
 body main .menu .menu__header {
   position: relative;
-  top: -50px;
+  top: -40px;
   background-color: #F6F6F6;
   border-top-right-radius: 40px;
   border-top-left-radius: 40px;
   display: flex;
   justify-content: space-around;
   padding-top: 30px;
+  height: 10px;
 }
 body main .menu .menu__header .menu__title {
   font-family: "Shrikhand";
-  font-style: italic;
   font-weight: 400;
   font-size: 28px;
   margin: 0;
 }
 body main .menu .menu__header button {
-  display: flex;
-  align-items: center;
+  padding-top: 5px;
 }
 body main .menu .menu__body {
   display: flex;
   flex-direction: column;
-  padding: 0 20px;
+  padding: 0 13px;
   background-color: #F6F6F6;
   gap: 40px;
 }
@@ -322,8 +326,9 @@ body main .menu .menu__body .card {
   transition: padding-right 1s ease-in-out;
   height: 69px;
   justify-content: center;
-  padding: 15px;
+  padding: 0 15px;
   margin-bottom: 0;
+  border-radius: 15px;
 }
 body main .menu .menu__body .card .card-content {
   padding: 0;
@@ -339,7 +344,7 @@ body main .menu .menu__body .card .card-content .card-txt .card-title {
 }
 body main .menu .menu__body .card .card-content .card-txt .card-subtitle {
   font-weight: 300;
-  font-size: 14px;
+  font-size: 15px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -352,7 +357,7 @@ body main .menu .menu__body .card:hover .card-txt {
 }
 body main .menu .menu__body .card:hover .checkmark {
   opacity: 1;
-  width: 20%;
+  width: 17%;
 }
 body main .menu .menu__body .command_action {
   display: flex;
@@ -360,6 +365,9 @@ body main .menu .menu__body .command_action {
 }
 body main .menu .menu__body .command_action .action_button {
   margin: 0;
+  width: 53%;
+  height: 50px;
+  padding: 0;
 }
 @media screen and (min-width: 1024px) {
   body main .menu {
@@ -405,7 +413,7 @@ body main .icon-button:hover .icon-hover {
 body main .action_button {
   height: 50px;
   margin: 20px;
-  border: 2px solid;
+  border: none;
   border-radius: 25px;
   font-weight: 500;
   font-size: 16px;
@@ -415,10 +423,10 @@ body main .action_button {
   width: 61%;
   height: 50px;
   cursor: pointer;
+  transition: background 3s ease-in-out;
 }
 body main .action_button:hover {
-  background-color: #FF79DA;
-  transition: 1s;
+  background: linear-gradient(#fface8, #bc95e9);
 }
 @media screen and (min-width: 1024px) {
   body main .action_button {
@@ -428,13 +436,12 @@ body main .action_button:hover {
 body .footer {
   background-color: #353535;
   color: white;
-  padding: 22px 25px;
+  padding: 0 25px;
 }
 body .footer .footer_title {
   font-family: "Shrikhand";
-  font-style: italic;
-  font-size: 40px;
-  font-weight: 800;
+  font-size: 18px;
+  font-weight: 400;
   padding: 20px 0;
   margin: 0;
 }
@@ -450,7 +457,15 @@ body .footer .footer_list li {
 }
 body .footer .footer_list li i {
   padding-right: 10px;
-  width: 5%;
+}
+body .footer .footer_list li .fa-utensils {
+  font-size: 14px;
+}
+body .footer .footer_list li .fa-handshake-angle {
+  font-size: 10px;
+}
+body .footer .footer_list .footer_last_links {
+  font-weight: 400;
 }
 @media screen and (min-width: 1024px) {
   body .footer {
@@ -458,14 +473,14 @@ body .footer .footer_list li i {
     justify-content: right;
     flex-direction: row-reverse;
     gap: 16px;
-    height: 114px;
+    height: 54px;
     align-items: end;
+    padding: 30px 25px 30px 25px;
   }
   body .footer .footer_title {
     font-size: 18px;
-    font-weight: bold;
-    padding-bottom: 0;
-    width: 10%;
+    font-weight: 400;
+    padding: 0 30px;
     height: 27px;
   }
   body .footer .footer_list {
@@ -475,6 +490,15 @@ body .footer .footer_list li i {
   }
   body .footer .footer_list li {
     padding: 0 5px;
+  }
+  body .footer .footer_list li i {
+    padding-right: 12px;
+  }
+  body .footer .footer_list li .fa-handshake-angle {
+    font-size: 12px;
+  }
+  body .footer .footer_list li:nth-child(3) {
+    padding-left: 30px;
   }
 }
 body .menu, body .menu__header, body .menu__footer {
